--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /notes
 /notes/**
 bash_menu.sh
-#file_restore.sh
-#node_backup*.sh
-#sample_bkup.vars
-#setup_backups.sh 
+file_restore.sh
+node_backup*.sh
+sample_bkup.vars
+setup_backups.sh
+_plinode_setup_bkup.sh
